removed vh to avoid line jumps

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ Header{
 /* Hero Section*/
 
 .hero{
-  height: 80vh;
+  height: 500px;
   background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2017/08/01/13/36/computer-2565478_960_720.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -74,7 +74,7 @@ Header{
 }
 
 .hero_text{
- padding-top: 200px;
+ padding-top: 150px;
  font-size: 2rem;
  font-weight: 900;
 }
@@ -179,7 +179,7 @@ Header{
 .forms{
   background: #333;
   text-align: center;
-  height: 50vh;
+  height: 350px;
   padding-top: 80px;
 }
 
